<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:padding="15dp"
    tools:context="com.example.kdao.assignment4_serviceapp.MainActivity"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:id="@+id/layout_title"
        >
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo" />
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/imageView1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            />
    </RelativeLayout>
    <TextView android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="@dimen/font_small"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        />
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tem_label1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/lable1"
            android:textColor="@color/white"
            android:textSize="@dimen/font_small"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textAlignment="viewEnd" />
        <EditText
            android:id="@+id/file_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="280dp"
            android:padding="3dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:digits="0123456789."
            android:inputType="number"
            android:layout_toRightOf="@id/tem_label1" />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tem_label2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/lable2"
            android:textColor="@color/white"
            android:textSize="@dimen/font_small"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textAlignment="viewEnd" />
        <EditText
            android:id="@+id/file_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="280dp"
            android:padding="3dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:digits="0123456789."
            android:inputType="number"
            android:layout_toRightOf="@id/tem_label2" />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tem_label3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/lable3"
            android:textColor="@color/white"
            android:textSize="@dimen/font_small"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textAlignment="viewEnd" />
        <EditText
            android:id="@+id/file_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="280dp"
            android:padding="3dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:digits="0123456789."
            android:inputType="number"
            android:layout_toRightOf="@id/tem_label3" />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tem_label4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/lable4"
            android:textColor="@color/white"
            android:textSize="@dimen/font_small"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textAlignment="viewEnd" />
        <EditText
            android:id="@+id/file_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="280dp"
            android:padding="3dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:digits="0123456789."
            android:inputType="number"
            android:layout_toRightOf="@id/tem_label4" />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tem_label5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/lable5"
            android:textColor="@color/white"
            android:textSize="@dimen/font_small"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textAlignment="viewEnd" />
        <EditText
            android:id="@+id/file_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="280dp"
            android:padding="3dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:digits="0123456789."
            android:inputType="number"
            android:layout_toRightOf="@id/tem_label5" />
    </RelativeLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@color/light_yellow"
        android:text="@string/download_btn"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_gravity="right"
        android:onClick="downloadFile" />
</LinearLayout>